[gd_scene load_steps=7 format=3 uid="uid://cwc6b6ocb6iaf"]

[ext_resource type="Script" path="res://Scenes/Projectiles/BulletComponent.gd" id="1_2ofpg"]
[ext_resource type="Texture2D" uid="uid://b3txk0h4atnm1" path="res://Assets/Tiles/tile_0000.png" id="2_lqmxt"]
[ext_resource type="Texture2D" uid="uid://cdxrao110o2gl" path="res://Assets/Tiles/tile_0007.png" id="3_l8lky"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_anxx7"]
radius = 3.0
height = 14.0

[sub_resource type="Animation" id="Animation_6byfw"]
resource_name = "BulletExplosion"
length = 0.1

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h0c76"]
_data = {
"BulletExplosion": SubResource("Animation_6byfw")
}

[node name="BulletComponent" type="Area2D"]
script = ExtResource("1_2ofpg")

[node name="BulletSprite" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(0.8, 0.8)
texture = ExtResource("2_lqmxt")

[node name="BulletExplosionSprite" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(-1.66893e-06, 2.98023e-07)
scale = Vector2(1.625, 1.625)
texture = ExtResource("3_l8lky")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_anxx7")

[node name="BulletExplosion" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_h0c76")
}
